# LearnCpp

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .codespell-ignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux-ci.yml  macos-ci.yml  windows-ci.yml
cmake/: CompileCommands.cmake  CompilerWarnings.cmake  FetchGoogleTest.cmake  Sanitizers.cmake  Sccache.cmake  StaticAnalysis.cmake
include/learn/: topic_registry.hpp
scripts/: configure-and-build.cmd  dev-shell.cmd
src/: main.cpp
src/classes_and_object_model_basics/: README.md
src/classes_and_object_model_basics/class_basics/: aggregate_vs_non_aggregate.cpp  constructor_delegation.cpp  explicit_constructor.cpp  members_and_access_control.cpp  nsdmi_default_member_init.cpp  this_pointer.cpp
src/classes_and_object_model_basics/class_misc/: const_and_mutable_member.cpp  friend_function_class.cpp  literal_type_constexpr_constructor.cpp  nested_class.cpp  ref_qualified_member_functions.cpp  static_member.cpp
src/classes_and_object_model_basics/ctad_inheritance_cpp23/: inherited_constructor_ctad_cpp23.cpp
src/classes_and_object_model_basics/deducing_this_cpp23/: collapse_ref_qualified_overloads.cpp  deducing_this_restrictions.cpp  explicit_object_parameter_basics.cpp  pass_this_by_value.cpp  recursive_lambda_via_deducing_this.cpp  simplified_crtp_via_deducing_this.cpp
src/classes_and_object_model_basics/inheritance_polymorphism_basics/: final_specifier.cpp  override_specifier.cpp  public_inheritance.cpp  pure_virtual_and_abstract.cpp  virtual_destructor.cpp  virtual_functions.cpp
src/classes_and_object_model_basics/operator_overloading/: basic_arithmetic_operators.cpp  comparison_operators_cpp20_spaceship.cpp  conversion_operators.cpp  defaulted_comparison_operators.cpp  explicit_conversion_operators.cpp  multidim_operator_subscript_cpp23.cpp  static_operator_call_static_subscript_cpp23.cpp  stream_insertion_extraction.cpp  subscript_and_call_operators.cpp
src/classes_and_object_model_basics/raii/: raii_exception_safety_pairing.cpp  raii_resource_handle.cpp
src/classes_and_object_model_basics/special_member_functions/: copy_assignment.cpp  copy_constructor.cpp  default_constructor.cpp  defaulted_and_deleted_members.cpp  destructor.cpp  move_assignment.cpp  move_constructor.cpp  rule_of_five.cpp  rule_of_three.cpp  rule_of_zero.cpp  suppression_rules.cpp
src/classic_idioms/: README.md
src/classic_idioms/generic_and_compile_time/: cpo_customization_point.cpp  detection_idiom.cpp  expression_template_idiom.cpp  if_consteval_branch_cpp23.cpp  policy_based_design_idiom.cpp  sfinae_if_constexpr_branch.cpp
src/classic_idioms/polymorphism_and_interface/: crtp_idiom.cpp  tag_dispatch_idiom.cpp  (+2 more)
src/compile_time_programming/: README.md
src/concurrency_and_threading/: README.md
src/control_flow_and_modern_syntax/: README.md
src/copy_move_smart_pointers/: README.md
src/coroutines/: README.md
src/deep_dive_abi_compile_link_ub_performance/: README.md
src/deep_dive_lifetime_and_ownership/: README.md
src/deep_dive_memory_management/: README.md
src/deep_dive_memory_model_and_concurrency/: README.md
src/deep_dive_name_lookup_overload_resolution/: README.md
src/deep_dive_object_model/: README.md
src/deep_dive_templates_compile_time_system/: README.md
src/engineering_system/: README.md
src/evolution_history/: README.md
src/exceptions_error_handling_ub/: README.md
src/functions_overloading_lambdas/: README.md
src/keywords_and_features_index/: README.md
src/learn/: topic_registry.cpp
src/part2_stage01_syntax_and_translation_model/: README.md
src/part2_stage02_type_system_value_category_deduction/: README.md
src/part2_stage03_functions_overloading_lambdas/: README.md
src/part2_stage04_classes_and_object_model_basics/: README.md
src/part2_stage05_copy_move_smart_pointers/: README.md
src/part2_stage06_templates_and_generics/: README.md
src/part2_stage07_compile_time_programming/: README.md
src/part2_stage08_control_flow_and_modern_syntax/: README.md
src/part2_stage09_exceptions_error_handling_ub/: README.md
src/part2_stage10_stl_deep_dive/: README.md
src/part2_stage11_concurrency_and_threading/: README.md
src/part2_stage12_coroutines/: README.md
src/part2_stage14_keywords_and_features_index/: README.md
src/part2_stage15_classic_idioms/: README.md
src/part3_standard_library_systematized/: README.md
src/part4_engineering_system/: README.md
src/part6_branch_a_object_model/: README.md
src/part6_branch_b_lifetime_and_ownership/: README.md
src/part6_branch_c_memory_management/: README.md
src/part6_branch_d_name_lookup_overload_resolution/: README.md
src/part6_branch_e_templates_compile_time_system/: README.md
src/part6_branch_f_memory_model_and_concurrency/: README.md
src/part6_branch_g_abi_compile_link_ub_performance/: README.md
src/standard_library_systematized/: README.md
src/stl_deep_dive/: README.md
src/syntax_and_translation_model/: README.md
src/templates_and_generics/: README.md
src/type_system_value_category_deduction/: README.md
(+1704 files in other folders)
